--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ legal:
     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2024. All rights reserved.
+copyright:             © 2024 do. Some rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
