--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:           >
 tagline:               hey this is my blog
 
 # A list of keywords for your blog
-keywords:              [server, cloud, network]
+keywords:              [server, cloud, experience]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
@@ -53,12 +53,14 @@ menu:
   - title:             blog
     url:               /blog/
     submenu: 
+      - title:         dev
+        url:           /dev/
       - title:         cloud
         url:           /cloud/
       - title:         network
         url:           /network/
-      - title:         dev
-        url:           /dev/
+      - title:         do
+        url:           /do/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
