--- a/_config.yml
+++ b/_config.yml
@@ -92,12 +92,7 @@ remote_theme: hydecorp/hydejack@v9
 
 # Customizaton
 # ----------------------------------------------------------------------------------------
- image:
-  path: /assets/img/image.png
-  srcset:
-    1920w: /assets/img/image@0,5x.jpg
-    960w:  /assets/img/image@0,25x.jpg
-    480w:  /assets/img/image@0,125x.jpg
+ 
 # Sidebar image and theme color of the site.
 accent_image:          /assets/img/sidebar-bg.png
 accent_color:          rgb(23, 174, 255)
@@ -411,7 +406,7 @@ jekyll_compose:
     drafts:
       layout: blog
       description: > 
-        blog description
+        my blog
       image:
         path: /assets/img/sidebar-bg.jpg
     posts:
