--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ author1:
     처음부터 잘하면 외계인
 
   # This photo will be used in the about section
-  picture:   /assets/img/about-img.png
+  picture:   /assets/img/logo.png
   
 
   # Social media icons in sidebar
