--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ menu:
         url:           /dev/
       - title:         cloud
         url:           /cloud/
-      - title:         network
-        url:           /network/
+      - title:         CSE
+        url:           /CSE/
       - title:         do
         url:           /do/
 
