Fix 'url not found' error due to directory structure

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ menu:
       - title:         cloud
         url:           /cloud/
       - title:         CSE
-        url:           /CSE/
+        url:           /cse/
       - title:         do
         url:           /do/
 
