--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ menu:
         url:           /dev/
       - title:         cloud
         url:           /cloud/
-      - title:         CSE
-        url:           /cse/
+      - title:         cs
+        url:           /cs/
       - title:         do
         url:           /do/
 
