--- a/_config.yml
+++ b/_config.yml
@@ -176,7 +176,7 @@ kramdown:
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-# google_analytics:      UA-XXXXXXXX-X
+google_analytics:      G-ZT698MT42Z
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
