--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.png
+accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          rgb(204, 212, 222)
 
 # This is used for the `theme-color` meta tag,
