Test open graph image

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ keywords:              [server, cloud, experience]
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
 logo:                  /assets/img/rocketcat.png
+image:                 /assets/img/rocketcat.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
