Test default header data

--- a/_config.yml
+++ b/_config.yml
@@ -121,6 +121,10 @@ defaults:
   # You can use this to provide a default accent color and background for
   # all pages under a given path:
   - scope:
+      path: ""
+    values:
+      image: "/assets/img/post-cover.png"
+  - scope:
       path:            hyde/
     values:
       accent_color:    rgb(38,139,210)
