--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -14,7 +14,7 @@ home:                  Home
 pages:                 Pages
 posts:                 Posts
 about:                 About
-related_posts:         Related Posts
+related_posts:         More Posts
 other_projects:        Other Projects
 comments:              Comments
 jump_to:               Jump to
