--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:           >
 # tagline:               
 
 # A list of keywords for your blog
-keywords:              [server, cloud, experience]
+keywords:              [server, experience]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
