Make about layout
- Make new about page.
- Hide portfolio page by removing portfolio tab from sidebar.

--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,10 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             portfolio
-    url:               /portfolio/
+  # - title:             portfolio
+  #   url:               /portfolio/
+  - title:             about
+    url:               /about/
   - title:             blog
     url:               /blog/
     submenu: 
