Create post: 20250121 Retrospect blog 1
- 7월 글은.... 쓸데없는 맞춤법 집착의 증거 ㄷㄷ

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,8 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    처음부터 잘하면 외계인
+    처음부터 잘하면 외계인  
+    근데 외계인처럼 잘하고 싶어
 
   # This photo will be used in the about section
   picture:   /assets/img/about-img.png
