Change Linkedin url

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,7 +20,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     github:          mingdodev
-    linkedin:        minseo-jang-73a7b72b6
+    linkedin:        min-seo-jang
     # twitter:         <username>
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
